--- a/style/settings.css
+++ b/style/settings.css
@@ -44,7 +44,7 @@ body {
 }
 
 #settings {
-  /* display: none; */
+  display: none;
   font-family: firaFont;
   z-index: 10;
   background-color: var(--bgColorDark);
